# K8sMCPs

./: .gitignore  LICENSE  README.md
github-mcp-server/: .dockerignore  .env.template  Dockerfile  Makefile  README.md  configmap.yaml  deployment-aks.yaml  deployment.yaml  namespace.yaml  secret.yaml.example  service.yaml  test-mcp.sh
test-agents/: .env.template  .gitignore  README.md  pyproject.toml
test-agents/github_test_agent/: __init__.py  agent.py
