[project]
name = "k8s-mcp-test-agents"
version = "0.1.0"
description = "Test agents for K8s MCP servers"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.13.0",
    "litellm>=1.76.3",
    "python-dotenv>=1.1.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
